Исправил pom.xml в stats-server